# hardware

./: .gitmodules  AUTHORS  CONTRIBUTORS  LICENSES  README.md
ecad/: .gitattributes  .gitignore  README.md
ecad/cables/: cables.yml  climate.yml  nyx.yml
ecad/climate/anemoi/: anemoi-cache.lib  anemoi-rescue.lib  anemoi.kicad_pcb  anemoi.kicad_prl  anemoi.kicad_pro  anemoi.kicad_sch  anemoi.net  anemoi.pro  anemoi.sch  fp-info-cache  fp-lib-table  sym-lib-table
ecad/climate/arke/: UC.kicad_sch  UC.sch  arke-cache.lib  arke-rescue.lib  arke.csv  arke.kicad_pcb  arke.kicad_prl  arke.kicad_pro  arke.kicad_sch  arke.net  arke.pro  arke.sch  arke.xml  fp-info-cache  fp-lib-table  kerykeion-bottom.pos  kerykeion-cache.lib  kerykeion-top.pos  rs232_isolator.kicad_sch  rs232_isolator.sch  sym-lib-table
ecad/climate/celaeno/: Relay.kicad_sch  Relay.sch  UC.kicad_sch  UC.sch  celaeno-cache.lib  celaeno-rescue.kicad_sym  celaeno-rescue.lib  celaeno.kicad_pcb  celaeno.kicad_prl  celaeno.kicad_pro  celaeno.kicad_sch  celaeno.net  celaeno.pro  celaeno.sch  celeano-cache.lib  celeano.kicad_pcb  celeano.net  celeano.pro  celeano.sch  fp-info-cache  i2c_level_shifter.kicad_sch  i2c_level_shifter.sch  sym-lib-table
ecad/climate/notus/: fp-info-cache  notus-cache.lib  notus.kicad_pcb  notus.kicad_prl  notus.kicad_pro  notus.kicad_sch  notus.net  notus.sch  sym-lib-table
ecad/climate/pleiades/: 12V_low_side_switch.sch  Relay.sch  UC.sch  i2c_mux.sch  pleiades-cache.lib  pleiades.kicad_pcb  pleiades.net  pleiades.pro  pleiades.sch  zeus-cache.lib
ecad/climate/prometheus/: panel.kicad_pcb  panel.kicad_prl  prometheus-cache.lib  prometheus.kicad_pcb  prometheus.kicad_prl  prometheus.kicad_pro  prometheus.kicad_sch  prometheus.net  prometheus.sch
ecad/climate/zeus/: 12V_low_side_switch.kicad_sch  12V_low_side_switch.sch  (+21 more)
ecad/common/: 12V5VDCDC.kicad_pcb  12V5VDCDC.kicad_prl  12V5VDCDC.kicad_pro  12V5VDCDC.kicad_sch  12V5VDCDC.net  12V5VDCDC.pro  12V5VDCDC.sch  12V5VDCDC_LDO-cache.lib  12V5VDCDC_LDO.kicad_pcb  12V5VDCDC_LDO.net  12V5VDCDC_LDO.sch  3V3LDO.kicad_sch  3V3LDO.sch  CAN_transceiver.kicad_sch  CAN_transceiver.sch  Fan_controller.kicad_sch  Fan_controller.sch  atmega16m1-breakout-cache.lib  atmega16m1-breakout.kicad_pcb  atmega16m1-breakout.net  atmega16m1-breakout.pro  atmega16m1-breakout.sch  spi_i2c_bridge.sch  sym-lib-table
ecad/helios/: fp-info-cache  fp-lib-table  helios-cache.lib  helios.kicad_pcb  helios.kicad_prl  helios.kicad_pro  helios.kicad_sch  helios.pro  helios.sch  ibom.config.ini  transmitter.kicad_sch
ecad/lib/: CDSOT23-SM712_SPICE.lib  MMBTA56.lib  PMEG6030EVP.lib  fort.bck  fort.dcm  fort.kicad_sym  fort.lib  fort2.lib  rd3p01bat_SPICE.lib  smaj_spice.lib  unil.kicad_wks
ecad/nyx/: #auto_saved_files#  fp-info-cache  fp-lib-table  ibom.config.ini  limiter_simulation.kicad_prl  limiter_simulation.kicad_pro  limiter_simulation.kicad_sch  limiter_simulation.wbk  micro_coupling_simulation.kicad_prl  micro_coupling_simulation.kicad_pro  micro_coupling_simulation.kicad_sch  micro_coupling_simulation.wbk  nyx.kicad_pcb  nyx.kicad_prl  nyx.kicad_pro  nyx.kicad_sch  nyx.kicad_sch-bak  sym-lib-table  thvd8010@55V.kicad_prl  thvd8010@55V.kicad_pro  thvd8010@55V.kicad_sch
ecad/phaeton/: fp-info-cache  phaeton.kicad_pcb  phaeton.kicad_prl  phaeton.kicad_pro  phaeton.kicad_sch
firmware/: avrdude.conf
firmware/arke/: CMakeLists.txt  README.md  upload_arke.sh
firmware/arke/include/: HostCommunication.h
firmware/arke/src/: CMakeLists.txt  HostLink.c  HostLink.h  LEDs.c  LEDs.h  SoftReset.c  SoftReset.h  Systime.c  Systime.h  config.h  main.c
firmware/celaeno/: CMakeLists.txt  README.md
firmware/celaeno/gotest/: main.go
firmware/celaeno/src/: CMakeLists.txt  FanControl.c  FanControl.h  LEDs.c  LEDs.h  Systime.c  Systime.h  config.h  main-blink.c  main.c
firmware/common/: FanControl.c  FanControl.h  LEDs.c  LEDs.h
firmware/helios/: .clang-format  CMakeLists.txt  README.md
firmware/helios/master/: .cmake-format.yaml  CMakeLists.txt
firmware/helios/master/src/: CMakeLists.txt  LED.cpp  LED.hpp  ModuleManager.c  ModuleManager.h  Systime.c  config_helios.in  main.c  main.cpp
firmware/helios/module/: CMakeLists.txt
firmware/helios/module/src/: CMakeLists.txt  ChargeMonitor.c  ChargeMonitor.h  Debug.c  Debug.h  LightManager.c  LightManager.h  SerialInterface.c  SerialInterface.h  Systime.c  Systime.h  main-test.c  main.c
firmware/helios/src/: CMakeLists.txt  LED.cpp  LED.hpp  main.cpp  pulse.pio
firmware/lib/rp2040-arke/: .clang-format  .cmake-format.yaml  CMakeLists.txt
firmware/lib/rp2040-arke/src/:  *Minibuf-1*  # *Minibuf-1*#  Arke.cpp  Arke.hpp  CMakeLists.txt  canbus.cpp  canbus.h  canbus.pio
firmware/lib/rp2040-arke/tests/: CMakeLists.txt  main.cpp
firmware/lib/rp2040-utils/: .cmake-format.yaml  CMakeLists.txt
firmware/lib/rp2040-utils/src/: Log.hpp  Queue.hpp  Scheduler.cpp
firmware/lib/rp2040-utils/src/utils/: CMakeLists.txt  Defer.hpp  Duration.cpp  Duration.hpp  FlashStorage.cpp  FlashStorage.hpp  Log.cpp  Log.hpp  Queue.hpp  RingBuffer.hpp  Scheduler.cpp  Scheduler.hpp
firmware/lib/rp2040-utils/tests/: main.cpp  storage.cpp
firmware/noctus/: CMakeLists.txt
firmware/notus/: CMakeLists.txt  main.cpp
firmware/notus/src/: Arke.cpp  Arke.hpp  CMakeLists.txt  main.cpp
firmware/nyx/: .cmake-format.yaml  CMakeLists.txt
firmware/nyx/src/: CMakeLists.txt  defer.hpp  main.c  main.cpp  system_clock.c  system_clock.cpp  system_clock.h  system_clock.hpp
firmware/phaeton/: .clang-format  .cmake-format.yaml  CMakeLists.txt
firmware/tests/zeus-monitor/: CMakeLists.txt
firmware/tests/zeus-monitor/src/: CAN.cpp  CAN.hpp  CMakeLists.txt  main.cpp
firmware/zeus/: .clang-format  CMakeLists.txt  README.md
firmware/zeus/src/: CMakeLists.txt  ClimateController.c  ClimateController.h  FanControl.c  Heaters.c  Heaters.h  Heaters_internal.c  Heaters_notus.c  PIDController.c  PIDController.h  Sensors.c  Sensors.h  config.h  crc8.c  crc8.h  main.c  math.h  test.cpp
mcad/: .gitattributes  .gitignore  README.md
mcad/helios/: Helios.ipj
(+592 files in other folders)
